# screen-capture

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_report.md
src/: app.rs  capture.rs  cli.rs  ffmpeg.rs  main.rs  monitor.rs  writer.rs
