[package]
name = "screen-capture"
version = "0.1.0"
edition = "2021"
description = "Standalone ffmpeg-based screen capture CLI with chunked MP4 output"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace]

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.31", features = ["clock"] }
clap = { version = "4.5.0", features = ["derive"] }
ctrlc = "3.4.5"
xcap = "0.9"
